# qt-qml-cmake-testbed

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: utils.cmake  variables.cmake
scripts/: svg2icns.sh
source/assets/: logo.icns
source/pch/: pch-qt.h  pch-stl.h
source/testbed-app/: CMakeLists.txt  main.cpp  main.qml  pch.h
source/wheel-lib/: CMakeLists.txt  Dummy.cpp  Dummy.h  Wheel.qml
